diesel_compile_tests/tests/fail/cannot_update_target_with_methods_other_than_filter_called.stderr
error[E0277]: the trait bound `SelectStatement<FromClause<table>, SelectClause<id>>: IntoUpdateTarget` is not satisfied
  --> tests/fail/cannot_update_target_with_methods_other_than_filter_called.rs:15:26
   |
LL |     let command = update(users.select(id)).set(id.eq(1));
   |                   ------ ^^^^^^^^^^^^^^^^ the trait `Identifiable` is not implemented for `SelectStatement<FromClause<table>, SelectClause<id>>`
   |                   |
   |                   required by a bound introduced by this call
   |
   = help: the trait `IntoUpdateTarget` is implemented for `SelectStatement<FromClause<F>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<F>>, diesel::query_builder::distinct_clause::NoDistinctClause, W>`
   = note: required for `SelectStatement<FromClause<table>, SelectClause<id>>` to implement `IntoUpdateTarget`
note: required by a bound in `diesel::update`
  --> DIESEL/diesel/diesel/src/query_builder/functions.rs
   |
LL | pub fn update<T: IntoUpdateTarget>(source: T) -> UpdateStatement<T::Table, T::WhereClause> {
   |                  ^^^^^^^^^^^^^^^^ required by this bound in `update`

   
error[E0277]: the trait bound `SelectStatement<FromClause<...>, ..., ..., ..., ...>: IntoUpdateTarget` is not satisfied
  --> tests/fail/cannot_update_target_with_methods_other_than_filter_called.rs:18:26
   |
LL |     let command = update(users.order(id)).set(id.eq(1));
   |                   ------ ^^^^^^^^^^^^^^^ the trait `Identifiable` is not implemented for `SelectStatement<FromClause<table>, ..., ..., ..., ...>`
   |                   |
   |                   required by a bound introduced by this call
   |
   = help: the trait `IntoUpdateTarget` is implemented for `SelectStatement<FromClause<F>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<F>>, diesel::query_builder::distinct_clause::NoDistinctClause, W>`
   = note: required for `SelectStatement<FromClause<table>, ..., ..., ..., ...>` to implement `IntoUpdateTarget`
note: required by a bound in `diesel::update`
  --> DIESEL/diesel/diesel/src/query_builder/functions.rs
   |
LL | pub fn update<T: IntoUpdateTarget>(source: T) -> UpdateStatement<T::Table, T::WhereClause> {
   |                  ^^^^^^^^^^^^^^^^ required by this bound in `update`

   
error[E0277]: the trait bound `SelectStatement<FromClause<table>, SelectClause<id>>: Identifiable` is not satisfied
  --> tests/fail/cannot_update_target_with_methods_other_than_filter_called.rs:15:19
   |
LL |     let command = update(users.select(id)).set(id.eq(1));
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Identifiable` is not implemented for `SelectStatement<FromClause<table>, SelectClause<id>>`
   |
   = help: the trait `IntoUpdateTarget` is implemented for `SelectStatement<FromClause<F>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<F>>, diesel::query_builder::distinct_clause::NoDistinctClause, W>`
   = note: required for `SelectStatement<FromClause<table>, SelectClause<id>>` to implement `IntoUpdateTarget`

   
error[E0277]: the trait bound `SelectStatement<FromClause<table>, ..., ..., ..., ...>: Identifiable` is not satisfied
  --> tests/fail/cannot_update_target_with_methods_other_than_filter_called.rs:18:19
   |
LL |     let command = update(users.order(id)).set(id.eq(1));
   |                   ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Identifiable` is not implemented for `SelectStatement<FromClause<table>, ..., ..., ..., ...>`
   |
   = help: the trait `IntoUpdateTarget` is implemented for `SelectStatement<FromClause<F>, diesel::query_builder::select_clause::DefaultSelectClause<FromClause<F>>, diesel::query_builder::distinct_clause::NoDistinctClause, W>`
   = note: required for `SelectStatement<FromClause<table>, ..., ..., ..., ...>` to implement `IntoUpdateTarget`

   For more information about this error, try `rustc --explain E0277`.
